--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,9 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open code4.html",
-            "file": "c:\\Users\\SRIT029\\Desktop\\full stack\\code4.html"
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
